[project]
name = "agentic-healthcare-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-chroma",
    "langchain-text-splitters",
    "torchvision",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
]
